SubBt/force-app/main/default/objects/Trade_Type__c/Trade_Type__c.object-meta.xml
<CustomObject>
    <label>Trade Type</label>
    <nameField>
        <label>Trade Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trade Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>