SubBt/force-app/main/default/objects/Trade_Type__c/fields/Payment_One__c.field-meta.xml
<CustomField>
    <fullName>Payment_One__c</fullName>
    <inlineHelpText>This is the percentage of payment that will be applied base on schedule completion %.</inlineHelpText>
    <label>Payment One (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>