SubBt/force-app/main/default/objects/Trade_Type__c/fields/This_is_the_percentage_of_payment_that_w__c.field-meta.xml
<CustomField>
    <fullName>This_is_the_percentage_of_payment_that_w__c</fullName>
    <inlineHelpText>This is the percentage of payment that will be applied base on schedule completion %.</inlineHelpText>
    <label>Payment Four (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>