SubBt/force-app/main/default/objects/Trade_Type__c/fields/Trade_Code__c.field-meta.xml
<CustomField>
    <fullName>Trade_Code__c</fullName>
    <label>Trade Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BATHACC</fullName>
            </value>
            <value>
                <fullName>BMSTWIN</fullName>
            </value>
            <value>
                <fullName>CABINETS</fullName>
            </value>
            <value>
                <fullName>CAULKING</fullName>
            </value>
            <value>
                <fullName>CENVAC</fullName>
            </value>
            <value>
                <fullName>CONCRFM</fullName>
            </value>
            <value>
                <fullName>DECK</fullName>
            </value>
            <value>
                <fullName>DRYWALL</fullName>
            </value>
            <value>
                <fullName>ELEC</fullName>
            </value>
            <value>
                <fullName>EXCA</fullName>
            </value>
            <value>
                <fullName>FIREP</fullName>
            </value>
            <value>
                <fullName>FLRS&amp;I</fullName>
            </value>
            <value>
                <fullName>FRMLAB</fullName>
            </value>
            <value>
                <fullName>FRMMAT</fullName>
            </value>
            <value>
                <fullName>GARDR</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>MASLAB</fullName>
            </value>
            <value>
                <fullName>MASMAT</fullName>
            </value>
            <value>
                <fullName>MIRROR (incl shower doors)</fullName>
            </value>
            <value>
                <fullName>PAINT</fullName>
            </value>
            <value>
                <fullName>PAVESTN</fullName>
            </value>
            <value>
                <fullName>PLUM</fullName>
            </value>
            <value>
                <fullName>PREWIRE</fullName>
            </value>
            <value>
                <fullName>RAILEXT</fullName>
            </value>
            <value>
                <fullName>SECURITY</fullName>
            </value>
            <value>
                <fullName>SHELVE</fullName>
            </value>
            <value>
                <fullName>SHINGLE</fullName>
            </value>
            <value>
                <fullName>SIDING</fullName>
            </value>
            <value>
                <fullName>STAIRS</fullName>
            </value>
            <value>
                <fullName>STEEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>