SubBt/force-app/main/default/objects/Trade_Type__c/fields/Trade_Description__c.field-meta.xml
<CustomField>
    <fullName>Trade_Description__c</fullName>
    <label>Trade Description</label>
    <type>TextArea</type>
</CustomField>