SubBt/force-app/main/default/objects/Trade_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Trade_Description__c</columns>
    <columns>Trade_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Payment_One__c</columns>
    <columns>Payment_Two__c</columns>
    <columns>Payment_Three__c</columns>
    <columns>This_is_the_percentage_of_payment_that_w__c</columns>
    <columns>Payment_Five__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>